# paramspecli

./: .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  versions.json  zensical.toml
.github/workflows/: docs.yml  test.yml
0.1/: 404.html  index.html  sitemap.xml
0.1/advanced/: index.html
0.1/basic/: index.html
0.1/doc/: index.html
0.1/extending/: index.html
0.1/qa/: index.html
0.1/recipes/: index.html
0.2.2/: 404.html  index.html  search.json  sitemap.xml
0.2.2/advanced/: index.html
0.2.2/basic/: index.html
0.2.2/doc/: index.html
0.2.2/extending/: index.html
0.2.2/qa/: index.html
0.3.0/: 404.html  index.html  search.json  sitemap.xml
0.3.0/advanced/: index.html
0.3.0/basic/: index.html
0.3.0/doc/: index.html
0.3.0/extending/: index.html
0.3.0/qa/: index.html
0.3.0/recipes/: index.html
docs/: advanced.md  basic.md  doc.md  extending.md  index.md  qa.md  recipes.md
src/paramspecli/: __init__.py  acts.py  apstub.py  args.py  cli.py  color.py  const.py  conv.py  doc.py  exc.py  fake.py  flags.py  md.py  opts.py  util.py
tests/: __init__.py  _later.py  fix.py  kitchen1.md  kitchen2.md  test_acts.py  test_args.py  test_completion.py  test_const.py  test_context.py  test_cov.py  test_doc.py  test_flags.py  test_help.py  test_load.py  test_opts.py  test_path.py  test_sections.py  test_smoke.py
tools/: gen_options_overloads.py
