[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "paramspecli"
authors = [{ name = "jkmnt" }]
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["version", "description"]

[project.urls]
Source = "https://github.com/jkmnt/paramspecli"
Documentation = "https://jkmnt.github.io/paramspecli"

[tool.flit.sdist]
exclude = ["tests/"]


[tool.ruff]
line-length = 120

[tool.black]
line-length = 120

[tool.ruff.lint]
select = [
    "E",
    "F",
    "UP",
    "B",
    "ANN0",
    "I",
    "SLOT",
    "ICN",
    "FBT",
    "C4",
    "LOG",
    "RET",
    "INT",
    "RUF",
    "PLE",
    "T20",
    "PT",
]

ignore = [
    "SIM108",
    "FBT003",
    "RET504",
    "RET505",
    "E501",
    "RUF015",
    "UP035",
    "C408",
    "B009",
    "B010",
]

[tool.pyright]
include = ["src", "tests"]
# typeCheckingMode = "strict"
typeCheckingMode = "standard"
useLibraryCodeForTypes = true
strictListInference = true
strictSetInference = true
strictDictionaryInference = true
reportMissingImports = "error"
# reportMissingTypeStubs = "none"
reportMissingParameterType = "warning"
reportUnnecessaryComparison = "information"
reportUnnecessaryContains = "information"
reportPrivateUsage = false

[tool.ty.analysis]
respect-type-ignore-comments = false

[tool.ty.rules]
assert-type-unspellable-subtype = "ignore"
# ty type assertions are not compatible with mypy/pyright
type-assertion-failure = "ignore"
# fails to find pytest
unresolved-import = "ignore"